use selfPartyId instead of srcPartyId.